--- a/assets/style.css
+++ b/assets/style.css
@@ -18,8 +18,8 @@
    
    img {
     display: block;
-    height: 50px;
-    width: 50px;
+    height: 5px;
+    width: 5px;
     margin-left: auto;
     margin-right: auto;
    }
@@ -33,3 +33,9 @@
     text-align: center;
     font-size: 30px;
    }
+   .card {
+    width: 80%;
+    margin: 40px auto;
+    border: 5px solid gray;
+    box-shadow: 5px 10px #888888;
+  }
