--- a/assets/style.css
+++ b/assets/style.css
@@ -18,20 +18,34 @@
    
    img {
     display: block;
-    height: 5px;
-    width: 5px;
+    height: 100px;
+    width: 100px;
+    margin-left: auto;
+    margin-right: auto;
+   }
+   img {
+    display: block;
+    height: 100px;
+    width: 100px;
+    margin-left: auto;
+    margin-right: auto;
+   }
+   img {
+    display: block;
+    height: 100px;
+    width: 100px;
     margin-left: auto;
     margin-right: auto;
    }
    
    ul {
-    padding-left: 40px;
-    font-size: 20px;
+    padding-left: 80px;
+    font-size: 40px;
    }
    
    p {
     text-align: center;
-    font-size: 30px;
+    font-size: 60px;
    }
    .card {
     width: 80%;
