--- a/assets/style.css
+++ b/assets/style.css
@@ -1,14 +1,14 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin: 10;
+    padding: 10;
    }
    
    header,
    footer {
     width: 100%;
-    height: 120px;
-    background-color: blue;
-    color: white;
+    height: 10px;
+    background-color: rgb(14, 151, 69);
+    color: rgb(162, 208, 64);
    }
    
    h1,
