--- a/assets/style.css
+++ b/assets/style.css
@@ -1,21 +1,28 @@
 * {
-    margin: 10;
-    padding: 10;
+    margin: 20;
+    padding: 20;
    }
    
-   header,
-   footer {
-    width: 100%;
-    height: 10px;
-    background-color: rgb(14, 151, 69);
+   header {width: 100%;
+    height: 70px;
+    background-color: rgb(4, 76, 165);
     color: rgb(162, 208, 64);
    }
-   
+
+
+   footer {
+    width: 100%;
+    height: 70px;
+    background-color: rgb(4, 76, 165);
+    color: rgb(162, 208, 64);
+   }
+ 
    h1,
    h2 {
     text-align: center;
    }
-   
+
+
    img {
     display: block;
     height: 100px;
@@ -48,8 +55,8 @@
     font-size: 60px;
    }
    .card {
-    width: 80%;
-    margin: 40px auto;
-    border: 5px solid gray;
-    box-shadow: 5px 10px #888888;
+    width: 100%;
+    margin: 30px auto;
+    border: 10px solid rgb(4, 76, 165);
+    box-shadow: 5px 10px #494849;
   }
